<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/corner_rectangle_shape"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/personal_logout_content"
            android:textColor="@color/personal_text_black"
            android:textSize="11sp"
            android:textAlignment="center"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/personal_logout_cancel"
            android:background="@drawable/background_shadow_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/personal_logout_cancel"
            android:textAlignment="center"
            android:textColor="@color/personal_dialog_text"
            android:textSize="13sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider_gray" />

        <TextView
            android:id="@+id/personal_logout_ensure"
            android:background="@drawable/background_shadow_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/personal_logout_ensure"
            android:textAlignment="center"
            android:textColor="@color/personal_dialog_text"
            android:textSize="13sp" />
    </LinearLayout>

</LinearLayout>